test/integration/cli-args/sstanc.t/fail/09_sampling_on_unprotected_data.stan
// Compile with: stanc --sstanc --sstan-protect=y
data {
  real y;
  real x;
}
parameters {
  real mu;
}
model {
  mu ~ normal(0, 1);

  x ~ normal(0, 1);
  y ~ normal(mu, 1);
}
